--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <title>Vote for your life</title>
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <!--link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"-->
-  <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script-->
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <style>
   #grafiikka
   {
@@ -18,9 +18,12 @@
 
       width: 100%;
       height: 100%;
-      background:rgba(255,0,0,0.5);
+      background:rgba(255,0,0,0.9);
 
       display: none;
+  }
+  .kohdeBtn {
+    margin: 20px;
   }
   </style>
 </head>
@@ -34,11 +37,13 @@
       <div class="col-md-10">
         <h2>Lisää äänestettävät ryhmät</h2>
 
-          <div class="form-group">
-            <label for="nimi">Anna nimi:</label><input class="form-control" type="text" id="nimi" name="nimi" placeholder="uuden ryhmän nimi tähän"/>
+
+        <div class="form-"
+            <label for="nimi">Anna nimi:</label><br><input type="text" id="nimi" name="nimi" placeholder="uuden ryhmän nimi tähän" size="10"/>
             <button id="lisää" class="btn btn-default">Lisää</button>
-          </div>
-      
+
+
+
       </div>
       <div class="col-md-2">
         <button class="btn btn-default">Nollaa</button>
@@ -61,8 +66,9 @@
       // uusien äänestyskohteiden lisäys
       $('#lisää').click(function(){
         var newGroup = $('#nimi').val();
-        $('#kohteet').append('<div class="kohde">' + newGroup + '<button class="kohdeBtn" data-kuka="' + newGroup + '">Äänestä</button></div>');
+        $('#kohteet').append('<div class="kohde"><button class="kohdeBtn btn btn-primary btn-lg" data-kuka="' + newGroup + '">Äänestä<br/>' + newGroup + '</button></div>');
         pisteet[newGroup] = 0;
+
         console.log(pisteet);
       });
 
